edited answers/graphs/tables over all the problems

--- a/p8105_hw3_kpc2124.Rmd
+++ b/p8105_hw3_kpc2124.Rmd
@@ -35,7 +35,6 @@ library(knitr)
 options(kableExtra.latex.load_packages = FALSE)
 library(kableExtra)
 library(viridis)
-library(ggridges)
 
 knitr::opts_chunk$set(
 	echo = TRUE,
@@ -63,7 +62,7 @@ library(p8105.datasets)
 data("instacart")
 ```
 
-The `instacart` data set has **`r nrow(instacart)`** observations and **`r ncol(instacart)`** variables, which gives **`r nrow(instacart) * ncol(instacart)`** distinct datapoints. Some key variables of this dataset are: **`r colnames(instacart)[1]`**, which ensures all items ordered are associated with the same order, **`r colnames(instacart)[5]`**, who placed the order, **`r colnames(instacart)[11]`**, what product was ordered, and **`r colnames(instacart)[15]`**, what department the product is from. The most orders made by a customer is **`r max(instacart[7])`**. The most popular item ordered is **`r names(which.max(table(instacart[11])))`**.
+The `instacart` data set has **`r nrow(instacart)`** observations and **`r ncol(instacart)`** variables, which gives **`r nrow(instacart) * ncol(instacart)`** distinct datapoints. There are **`r sum(is.na(instacart))`** missing datapoints in this dataset. Some key variables of this dataset are: **`r colnames(instacart)[1]`**, which ensures all items ordered are associated with the same order, **`r colnames(instacart)[5]`**, who placed the order, **`r colnames(instacart)[11]`**, what product was ordered, and **`r colnames(instacart)[15]`**, what department the product is from. The most orders made by a customer is **`r max(instacart[7])`**. The most popular item ordered is **`r names(which.max(table(instacart[11])))`**.
 
 *1a: How many aisles are there, and which aisles are the most items ordered from?*
 
@@ -102,7 +101,8 @@ instacart_plot = instacart %>%
     x = "Aisle Name",
     caption = "Data from Instacart") +
   theme(
-    axis.text.x = element_text(angle = 90),
+    axis.text.x = element_text(angle = 90,
+                               hjust = 1),
     legend.position = "right") + 
   scale_fill_discrete(name = "Department Name") +
   scale_y_continuous(
@@ -118,25 +118,31 @@ instacart_plot
 
 ```{r}
 instacart %>%
-  group_by(aisle,product_name) %>%
   filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>%
+  group_by(aisle,product_name) %>%
   mutate(freq = n()) %>%
   arrange(aisle,desc(freq)) %>%
   distinct(aisle,product_name,freq) %>%
-  ungroup() %>% 
+  mutate(prod_freq = paste(product_name,freq, sep = "\n")) %>%
+  ungroup() %>%
   group_by(aisle) %>%
   mutate(rank = dense_rank(desc(freq))) %>%
   filter(rank %in% c(1,2,3)) %>%
-  select(aisle,rank,product_name,freq) %>% 
+  select(rank,aisle,prod_freq) %>% 
+  pivot_wider(
+    names_from = "aisle",
+    values_from = "prod_freq"
+  ) %>% 
   kable(
-    caption = "Most popular items in 'Baking Ingredients', 'Dog Food Care', and 'Packaged Vegetables Fruits' Aisles",
-    col.names = c("Aisle Name",
-                  "Ranking",
-                  "Product Name",
-                  "Number of Items Purchased"))
+    caption = "Most Popular Items and Number of Times Each Item was Ordered in 'Baking Ingredients', 'Dog Food Care', and 'Packaged Vegetables Fruits' Aisles",
+    col.names = c("Ranking",
+                  "Baking Ingredients",
+                  "Dog Food Care",
+                  "Packaged Vegetables Fruits")
+  )
 ```
 
-**The 3 most popular `Baking Ingredients` items are `Light Brown Sugar`, `Pure Baking Soda`, and `Cane Sugar`. The 3 most popular `Dog Food Care` items are `Snack Sticks Chicken & Rice Recipe Dog Treats` `Organix Chicken & Brown Rice Recipe`, and `Small Dog Biscuits`. The 3 most popular `Packaged Vegetables Fruits` items are `Organic Baby Spinach`, `Organic Raspberries`, and `Organic Blueberries`.**
+**The most popular `Baking Ingredients` items (and frequency of purchase) are `Light Brown Sugar (499)`, `Pure Baking Soda (387)`, and `Cane Sugar (336)`. The most popular `Dog Food Care` items (and frequency of purchase) are `Snack Sticks Chicken & Rice Recipe Dog Treats (30)` `Organix Chicken & Brown Rice Recipe (28)`, and `Small Dog Biscuits (26)`. The most popular `Packaged Vegetables Fruits` items (and frequency of purchase) are `Organic Baby Spinach (9784)`, `Organic Raspberries (5546)`, and `Organic Blueberries (4966)`.**
 
 *1d: Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).*
 
@@ -186,6 +192,8 @@ brfss_df =
   arrange(factor(response, levels =  c("Poor","Fair","Good","Very good","Excellent")))
 ```
 
+**I filtered the data to contain only the Overall Health topic and arranged the data so responses were ordered from "Poor" to "Excellent" for the question "How is your general health?" There are `r nrow(brfss_df)` observations in the dataset, with `r ncol(brfss_df)` variables. There are `r sum(is.na(brfss_df))` missing datapoints in this dataset. The average sample size over all locations, across all states, was `r mean(pull(brfss_df,sample_size))`. This data was collected from 2002 to 2010.**
+
 *2a: In 2002, which states were observed at 7 or more locations? What about in 2010?*
 
 ```{r, results = FALSE}
@@ -219,15 +227,16 @@ brfss_df %>%
   ggplot(aes(x = year, y = avg_data_value, color = locationabbr)) +
   geom_line(size = 1.25, alpha = 0.8) +
   labs(
-    title = "Mean Prevalence of Landlines Over Time, by State",
+    title = "Mean Prevalence of Landlines, Among Those who Responded 'Excellent', Over Time, by State",
     x = "Year",
     y = "Average Prevalence of Landlines",
     caption = "BRFSS data") +
   theme(
-   legend.position = "right")
+   legend.position = "right") +
+  scale_colour_discrete (name = "State (and DC)")
 ```
 
-**Given that we are observing the mean data value across time for all states in this dataset, it is difficult to see if there are any trends of prevalence of landline telephones over time unless we focus on individual states or on a smaller subset of states.**
+**Given that we are observing the mean data value across time for all states in this dataset, it is difficult to see if there are any trends of prevalence of landline telephones over time among those who responded "Excellent" unless we focus on individual states or on a smaller subset of states, like region.**
 
 *2c: Make a two-panel plot showing, for the years 2006, and 2010, distribution of data_value for responses (“Poor” to “Excellent”) among locations in NY State.*
 
@@ -247,7 +256,7 @@ brfss_df %>%
     breaks = c(10,15,20,25,30,35,40,45))
 ```
 
-**The distribution of data_value (the prevalence of landlines) for responses among locations in NY State seem to follow similar patterns between 2006 and 2010. The prevalence of landlines was lowest among those who responded that their general health was poor across all locations in 2006 and 2010, followed by "Fair" and "Excellent" responses. Depending on location, the prevalence of landlines was highest in those who responded "Good" or "Very good".**
+**The distribution of data_value (the prevalence of landlines) for responses among locations in NY State seem to follow similar patterns between 2006 and 2010. The prevalence of landlines was lowest among those who responded that their general health was "poor"Poor" across all locations in 2006 and 2010, followed by "Fair" and "Excellent" responses. Depending on location, the prevalence of landlines was highest in those who responded "Good" or "Very good".**
 
 
 
@@ -268,7 +277,7 @@ accel_data = read_csv("./data/accel_data.csv", col_types = cols(
     names_ptypes = list(activity = integer()),
     values_to = "counts"
   ) %>% 
-  mutate(day_of_week = ifelse(day %in% c("Saturday","Sunday"),"weekend","weekday"))
+  mutate(day_end = ifelse(day %in% c("Saturday","Sunday"),"weekend","weekday"))
 ```
 
 **The variables in this dataset are `r colnames(accel_data)[1:6]` There are `r nrow(accel_data)` rows and `r ncol(accel_data)` columns for a total of `r nrow(accel_data) * ncol(accel_data)` observations. This patient was observed for `r max(pull(accel_data,day_id))` days and had a mean activity count of `r round(mean(pull(accel_data,counts)),2)` per minute.**
@@ -285,17 +294,17 @@ accel_data %>%
   mutate(total_activity = sum(counts)) %>%
   ungroup() %>%
   arrange(week,day_num) %>%
-  distinct(week,day,total_activity,day_of_week) %>%
+  distinct(week,day,total_activity) %>%
+  pivot_wider(
+    names_from = "day",
+    values_from = "total_activity"
+  ) %>% 
   kable(
-    caption = "Total Daily Activity over 5 weeks",
-    col.names = c("Week",
-                  "Day",
-                  "Total Activity",
-                  "Weekday/Weekend")
-    )
+    caption = "Total Daily Activity over 5 weeks"
+  )
 ```
 
-**On first glance, it appears as though this patient is more active on Fridays and weekends, however, in the later weeks, this pattern dissipates and total daily activity varies more.**
+**There are no obvious trends in this data. Tuesdays, Wednesdays, and Thursdays, the patient seems to have a somewhat consistent level of activity, while activity level varies more widely for Sunday, Monday, Friday, and Saturday. On the last 2 Saturdays of observation, it appears that the patient was not active.**
 
 *3c: Accelerometer data allows the inspection activity over the course of the day. Make a single-panel plot that shows the 24-hour activity time courses for each day and use color to indicate day of the week. Describe in words any patterns or conclusions you can make based on this graph.*
 
