--- a/p8105_hw3_kpc2124.md
+++ b/p8105_hw3_kpc2124.md
@@ -42,12 +42,13 @@ Kristi Chau
 # Problem 1
 
 The `instacart` data set has **1384617** observations and **15**
-variables, which gives **20769255** distinct datapoints. Some key
-variables of this dataset are: **order\_id**, which ensures all items
-ordered are associated with the same order, **user\_id**, who placed the
-order, **product\_name**, what product was ordered, and **department**,
-what department the product is from. The most orders made by a customer
-is **100**. The most popular item ordered is **Banana**.
+variables, which gives **20769255** distinct datapoints. There are **0**
+missing datapoints in this dataset. Some key variables of this dataset
+are: **order\_id**, which ensures all items ordered are associated with
+the same order, **user\_id**, who placed the order, **product\_name**,
+what product was ordered, and **department**, what department the
+product is from. The most orders made by a customer is **100**. The most
+popular item ordered is **Banana**.
 
 *1a: How many aisles are there, and which aisles are the most items
 ordered from?*
@@ -89,7 +90,8 @@ instacart_plot = instacart %>%
     x = "Aisle Name",
     caption = "Data from Instacart") +
   theme(
-    axis.text.x = element_text(angle = 90),
+    axis.text.x = element_text(angle = 90,
+                               hjust = 1),
     legend.position = "right") + 
   scale_fill_discrete(name = "Department Name") +
   scale_y_continuous(
@@ -114,42 +116,42 @@ table.*
 
 ``` r
 instacart %>%
-  group_by(aisle,product_name) %>%
   filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>%
+  group_by(aisle,product_name) %>%
   mutate(freq = n()) %>%
   arrange(aisle,desc(freq)) %>%
   distinct(aisle,product_name,freq) %>%
-  ungroup() %>% 
+  mutate(prod_freq = paste(product_name,freq, sep = "\n")) %>%
+  ungroup() %>%
   group_by(aisle) %>%
   mutate(rank = dense_rank(desc(freq))) %>%
   filter(rank %in% c(1,2,3)) %>%
-  select(aisle,rank,product_name,freq) %>% 
+  select(rank,aisle,prod_freq) %>% 
+  pivot_wider(
+    names_from = "aisle",
+    values_from = "prod_freq"
+  ) %>% 
   kable(
-    caption = "Most popular items in 'Baking Ingredients', 'Dog Food Care', and 'Packaged Vegetables Fruits' Aisles",
-    col.names = c("Aisle Name",
-                  "Ranking",
-                  "Product Name",
-                  "Number of Items Purchased"))
+    caption = "Most Popular Items and Number of Times Each Item was Ordered in 'Baking Ingredients', 'Dog Food Care', and 'Packaged Vegetables Fruits' Aisles",
+    col.names = c("Ranking",
+                  "Baking Ingredients",
+                  "Dog Food Care",
+                  "Packaged Vegetables Fruits")
+  )
 ```
 
 <table>
 
 <caption>
 
-Most popular items in ‘Baking Ingredients’, ‘Dog Food Care’, and
-‘Packaged Vegetables Fruits’ Aisles
+Most Popular Items and Number of Times Each Item was Ordered in ‘Baking
+Ingredients’, ‘Dog Food Care’, and ‘Packaged Vegetables Fruits’ Aisles
 
 </caption>
 
 <thead>
 
 <tr>
-
-<th style="text-align:left;">
-
-Aisle Name
-
-</th>
 
 <th style="text-align:right;">
 
@@ -159,13 +161,19 @@ Ranking
 
 <th style="text-align:left;">
 
-Product Name
+Baking Ingredients
 
 </th>
 
-<th style="text-align:right;">
+<th style="text-align:left;">
 
-Number of Items Purchased
+Dog Food Care
+
+</th>
+
+<th style="text-align:left;">
+
+Packaged Vegetables Fruits
 
 </th>
 
@@ -177,12 +185,6 @@ Number of Items Purchased
 
 <tr>
 
-<td style="text-align:left;">
-
-baking ingredients
-
-</td>
-
 <td style="text-align:right;">
 
 1
@@ -191,25 +193,25 @@ baking ingredients
 
 <td style="text-align:left;">
 
-Light Brown Sugar
+Light Brown Sugar 499
 
 </td>
 
-<td style="text-align:right;">
+<td style="text-align:left;">
 
-499
+Snack Sticks Chicken & Rice Recipe Dog Treats 30
+
+</td>
+
+<td style="text-align:left;">
+
+Organic Baby Spinach 9784
 
 </td>
 
 </tr>
 
 <tr>
-
-<td style="text-align:left;">
-
-baking ingredients
-
-</td>
 
 <td style="text-align:right;">
 
@@ -219,25 +221,25 @@ baking ingredients
 
 <td style="text-align:left;">
 
-Pure Baking Soda
+Pure Baking Soda 387
 
 </td>
 
-<td style="text-align:right;">
+<td style="text-align:left;">
 
-387
+Organix Chicken & Brown Rice Recipe 28
+
+</td>
+
+<td style="text-align:left;">
+
+Organic Raspberries 5546
 
 </td>
 
 </tr>
 
 <tr>
-
-<td style="text-align:left;">
-
-baking ingredients
-
-</td>
 
 <td style="text-align:right;">
 
@@ -247,181 +249,19 @@ baking ingredients
 
 <td style="text-align:left;">
 
-Cane Sugar
-
-</td>
-
-<td style="text-align:right;">
-
-336
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:left;">
-
-dog food care
-
-</td>
-
-<td style="text-align:right;">
-
-1
+Cane Sugar 336
 
 </td>
 
 <td style="text-align:left;">
 
-Snack Sticks Chicken & Rice Recipe Dog Treats
-
-</td>
-
-<td style="text-align:right;">
-
-30
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:left;">
-
-dog food care
-
-</td>
-
-<td style="text-align:right;">
-
-2
+Small Dog Biscuits 26
 
 </td>
 
 <td style="text-align:left;">
 
-Organix Chicken & Brown Rice Recipe
-
-</td>
-
-<td style="text-align:right;">
-
-28
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:left;">
-
-dog food care
-
-</td>
-
-<td style="text-align:right;">
-
-3
-
-</td>
-
-<td style="text-align:left;">
-
-Small Dog Biscuits
-
-</td>
-
-<td style="text-align:right;">
-
-26
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:left;">
-
-packaged vegetables fruits
-
-</td>
-
-<td style="text-align:right;">
-
-1
-
-</td>
-
-<td style="text-align:left;">
-
-Organic Baby Spinach
-
-</td>
-
-<td style="text-align:right;">
-
-9784
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:left;">
-
-packaged vegetables fruits
-
-</td>
-
-<td style="text-align:right;">
-
-2
-
-</td>
-
-<td style="text-align:left;">
-
-Organic Raspberries
-
-</td>
-
-<td style="text-align:right;">
-
-5546
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:left;">
-
-packaged vegetables fruits
-
-</td>
-
-<td style="text-align:right;">
-
-3
-
-</td>
-
-<td style="text-align:left;">
-
-Organic Blueberries
-
-</td>
-
-<td style="text-align:right;">
-
-4966
+Organic Blueberries 4966
 
 </td>
 
@@ -431,12 +271,14 @@ Organic Blueberries
 
 </table>
 
-**The 3 most popular `Baking Ingredients` items are `Light Brown Sugar`,
-`Pure Baking Soda`, and `Cane Sugar`. The 3 most popular `Dog Food Care`
-items are `Snack Sticks Chicken & Rice Recipe Dog Treats` `Organix
-Chicken & Brown Rice Recipe`, and `Small Dog Biscuits`. The 3 most
-popular `Packaged Vegetables Fruits` items are `Organic Baby Spinach`,
-`Organic Raspberries`, and `Organic Blueberries`.**
+**The most popular `Baking Ingredients` items (and frequency of
+purchase) are `Light Brown Sugar (499)`, `Pure Baking Soda (387)`, and
+`Cane Sugar (336)`. The most popular `Dog Food Care` items (and
+frequency of purchase) are `Snack Sticks Chicken & Rice Recipe Dog
+Treats (30)` `Organix Chicken & Brown Rice Recipe (28)`, and `Small Dog
+Biscuits (26)`. The most popular `Packaged Vegetables Fruits` items (and
+frequency of purchase) are `Organic Baby Spinach (9784)`, `Organic
+Raspberries (5546)`, and `Organic Blueberries (4966)`.**
 
 *1d: Make a table showing the mean hour of the day at which Pink Lady
 Apples and Coffee Ice Cream are ordered on each day of the week; format
@@ -659,6 +501,14 @@ brfss_df =
   arrange(factor(response, levels =  c("Poor","Fair","Good","Very good","Excellent")))
 ```
 
+**I filtered the data to contain only the Overall Health topic and
+arranged the data so responses were ordered from “Poor” to “Excellent”
+for the question “How is your general health?” There are 10625
+observations in the dataset, with 23 variables. There are 31847 missing
+datapoints in this dataset. The average sample size over all locations,
+across all states, was 145.9232. This data was collected from 2002 to
+2010.**
+
 *2a: In 2002, which states were observed at 7 or more locations? What
 about in 2010?*
 
@@ -702,20 +552,22 @@ brfss_df %>%
   ggplot(aes(x = year, y = avg_data_value, color = locationabbr)) +
   geom_line(size = 1.25, alpha = 0.8) +
   labs(
-    title = "Mean Prevalence of Landlines Over Time, by State",
+    title = "Mean Prevalence of Landlines, Among Those who Responded 'Excellent', Over Time, by State",
     x = "Year",
     y = "Average Prevalence of Landlines",
     caption = "BRFSS data") +
   theme(
-   legend.position = "right")
+   legend.position = "right") +
+  scale_colour_discrete (name = "State (and DC)")
 ```
 
 <img src="p8105_hw3_kpc2124_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
 
 **Given that we are observing the mean data value across time for all
 states in this dataset, it is difficult to see if there are any trends
-of prevalence of landline telephones over time unless we focus on
-individual states or on a smaller subset of states.**
+of prevalence of landline telephones over time among those who responded
+“Excellent” unless we focus on individual states or on a smaller subset
+of states, like region.**
 
 *2c: Make a two-panel plot showing, for the years 2006, and 2010,
 distribution of data\_value for responses (“Poor” to “Excellent”) among
@@ -742,7 +594,7 @@ brfss_df %>%
 **The distribution of data\_value (the prevalence of landlines) for
 responses among locations in NY State seem to follow similar patterns
 between 2006 and 2010. The prevalence of landlines was lowest among
-those who responded that their general health was poor across all
+those who responded that their general health was “poor”Poor" across all
 locations in 2006 and 2010, followed by “Fair” and “Excellent”
 responses. Depending on location, the prevalence of landlines was
 highest in those who responded “Good” or “Very good”.**
@@ -768,11 +620,11 @@ accel_data = read_csv("./data/accel_data.csv", col_types = cols(
     names_ptypes = list(activity = integer()),
     values_to = "counts"
   ) %>% 
-  mutate(day_of_week = ifelse(day %in% c("Saturday","Sunday"),"weekend","weekday"))
+  mutate(day_end = ifelse(day %in% c("Saturday","Sunday"),"weekend","weekday"))
 ```
 
 **The variables in this dataset are week, day\_id, day, activity,
-counts, day\_of\_week There are 50400 rows and 6 columns for a total of
+counts, day\_end There are 50400 rows and 6 columns for a total of
 302400 observations. This patient was observed for 35 days and had a
 mean activity count of 267.04 per minute.**
 
@@ -791,14 +643,14 @@ accel_data %>%
   mutate(total_activity = sum(counts)) %>%
   ungroup() %>%
   arrange(week,day_num) %>%
-  distinct(week,day,total_activity,day_of_week) %>%
+  distinct(week,day,total_activity) %>%
+  pivot_wider(
+    names_from = "day",
+    values_from = "total_activity"
+  ) %>% 
   kable(
-    caption = "Total Daily Activity over 5 weeks",
-    col.names = c("Week",
-                  "Day",
-                  "Total Activity",
-                  "Weekday/Weekend")
-    )
+    caption = "Total Daily Activity over 5 weeks"
+  )
 ```
 
 <table>
@@ -815,25 +667,49 @@ Total Daily Activity over 5 weeks
 
 <th style="text-align:right;">
 
-Week
-
-</th>
-
-<th style="text-align:left;">
-
-Day
+week
 
 </th>
 
 <th style="text-align:right;">
 
-Total Activity
+Sunday
 
 </th>
 
-<th style="text-align:left;">
+<th style="text-align:right;">
 
-Weekday/Weekend
+Monday
+
+</th>
+
+<th style="text-align:right;">
+
+Tuesday
+
+</th>
+
+<th style="text-align:right;">
+
+Wednesday
+
+</th>
+
+<th style="text-align:right;">
+
+Thursday
+
+</th>
+
+<th style="text-align:right;">
+
+Friday
+
+</th>
+
+<th style="text-align:right;">
+
+Saturday
 
 </th>
 
@@ -851,37 +727,9 @@ Weekday/Weekend
 
 </td>
 
-<td style="text-align:left;">
-
-Sunday
-
-</td>
-
 <td style="text-align:right;">
 
-631105.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekend
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-1
-
-</td>
-
-<td style="text-align:left;">
-
-Monday
+631105
 
 </td>
 
@@ -891,149 +739,33 @@ Monday
 
 </td>
 
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
 <td style="text-align:right;">
 
-1
-
-</td>
-
-<td style="text-align:left;">
-
-Tuesday
+307094.2
 
 </td>
 
 <td style="text-align:right;">
 
-307094.24
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-1
-
-</td>
-
-<td style="text-align:left;">
-
-Wednesday
+340115
 
 </td>
 
 <td style="text-align:right;">
 
-340115.01
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-1
-
-</td>
-
-<td style="text-align:left;">
-
-Thursday
+355923.6
 
 </td>
 
 <td style="text-align:right;">
 
-355923.64
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-1
-
-</td>
-
-<td style="text-align:left;">
-
-Friday
+480542.6
 
 </td>
 
 <td style="text-align:right;">
 
-480542.62
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-1
-
-</td>
-
-<td style="text-align:left;">
-
-Saturday
-
-</td>
-
-<td style="text-align:right;">
-
-376254.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekend
+376254
 
 </td>
 
@@ -1047,37 +779,9 @@ weekend
 
 </td>
 
-<td style="text-align:left;">
-
-Sunday
-
-</td>
-
 <td style="text-align:right;">
 
-422018.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekend
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-2
-
-</td>
-
-<td style="text-align:left;">
-
-Monday
+422018
 
 </td>
 
@@ -1087,149 +791,33 @@ Monday
 
 </td>
 
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
 <td style="text-align:right;">
 
-2
-
-</td>
-
-<td style="text-align:left;">
-
-Tuesday
+423245.0
 
 </td>
 
 <td style="text-align:right;">
 
-423245.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-2
-
-</td>
-
-<td style="text-align:left;">
-
-Wednesday
+440962
 
 </td>
 
 <td style="text-align:right;">
 
-440962.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-2
-
-</td>
-
-<td style="text-align:left;">
-
-Thursday
+474048.0
 
 </td>
 
 <td style="text-align:right;">
 
-474048.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-2
-
-</td>
-
-<td style="text-align:left;">
-
-Friday
+568839.0
 
 </td>
 
 <td style="text-align:right;">
 
-568839.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-2
-
-</td>
-
-<td style="text-align:left;">
-
-Saturday
-
-</td>
-
-<td style="text-align:right;">
-
-607175.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekend
+607175
 
 </td>
 
@@ -1243,37 +831,9 @@ weekend
 
 </td>
 
-<td style="text-align:left;">
-
-Sunday
-
-</td>
-
 <td style="text-align:right;">
 
-467052.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekend
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-3
-
-</td>
-
-<td style="text-align:left;">
-
-Monday
+467052
 
 </td>
 
@@ -1283,149 +843,33 @@ Monday
 
 </td>
 
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
 <td style="text-align:right;">
 
-3
-
-</td>
-
-<td style="text-align:left;">
-
-Tuesday
+381507.0
 
 </td>
 
 <td style="text-align:right;">
 
-381507.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-3
-
-</td>
-
-<td style="text-align:left;">
-
-Wednesday
+468869
 
 </td>
 
 <td style="text-align:right;">
 
-468869.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-3
-
-</td>
-
-<td style="text-align:left;">
-
-Thursday
+371230.0
 
 </td>
 
 <td style="text-align:right;">
 
-371230.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-3
-
-</td>
-
-<td style="text-align:left;">
-
-Friday
+467420.0
 
 </td>
 
 <td style="text-align:right;">
 
-467420.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-3
-
-</td>
-
-<td style="text-align:left;">
-
-Saturday
-
-</td>
-
-<td style="text-align:right;">
-
-382928.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekend
+382928
 
 </td>
 
@@ -1439,37 +883,9 @@ weekend
 
 </td>
 
-<td style="text-align:left;">
-
-Sunday
-
-</td>
-
 <td style="text-align:right;">
 
-260617.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekend
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-4
-
-</td>
-
-<td style="text-align:left;">
-
-Monday
+260617
 
 </td>
 
@@ -1479,149 +895,33 @@ Monday
 
 </td>
 
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
 <td style="text-align:right;">
 
-4
-
-</td>
-
-<td style="text-align:left;">
-
-Tuesday
+319568.0
 
 </td>
 
 <td style="text-align:right;">
 
-319568.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-4
-
-</td>
-
-<td style="text-align:left;">
-
-Wednesday
+434460
 
 </td>
 
 <td style="text-align:right;">
 
-434460.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-4
-
-</td>
-
-<td style="text-align:left;">
-
-Thursday
+340291.0
 
 </td>
 
 <td style="text-align:right;">
 
-340291.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-4
-
-</td>
-
-<td style="text-align:left;">
-
-Friday
+154049.0
 
 </td>
 
 <td style="text-align:right;">
 
-154049.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-4
-
-</td>
-
-<td style="text-align:left;">
-
-Saturday
-
-</td>
-
-<td style="text-align:right;">
-
-1440.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekend
+1440
 
 </td>
 
@@ -1635,37 +935,9 @@ weekend
 
 </td>
 
-<td style="text-align:left;">
-
-Sunday
-
-</td>
-
 <td style="text-align:right;">
 
-138421.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekend
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-5
-
-</td>
-
-<td style="text-align:left;">
-
-Monday
+138421
 
 </td>
 
@@ -1675,149 +947,33 @@ Monday
 
 </td>
 
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
 <td style="text-align:right;">
 
-5
-
-</td>
-
-<td style="text-align:left;">
-
-Tuesday
+367824.0
 
 </td>
 
 <td style="text-align:right;">
 
-367824.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-5
-
-</td>
-
-<td style="text-align:left;">
-
-Wednesday
+445366
 
 </td>
 
 <td style="text-align:right;">
 
-445366.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-5
-
-</td>
-
-<td style="text-align:left;">
-
-Thursday
+549658.0
 
 </td>
 
 <td style="text-align:right;">
 
-549658.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-5
-
-</td>
-
-<td style="text-align:left;">
-
-Friday
+620860.0
 
 </td>
 
 <td style="text-align:right;">
 
-620860.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekday
-
-</td>
-
-</tr>
-
-<tr>
-
-<td style="text-align:right;">
-
-5
-
-</td>
-
-<td style="text-align:left;">
-
-Saturday
-
-</td>
-
-<td style="text-align:right;">
-
-1440.00
-
-</td>
-
-<td style="text-align:left;">
-
-weekend
+1440
 
 </td>
 
@@ -1827,9 +983,11 @@ weekend
 
 </table>
 
-**On first glance, it appears as though this patient is more active on
-Fridays and weekends, however, in the later weeks, this pattern
-dissipates and total daily activity varies more.**
+**There are no obvious trends in this data. Tuesdays, Wednesdays, and
+Thursdays, the patient seems to have a somewhat consistent level of
+activity, while activity level varies more widely for Sunday, Monday,
+Friday, and Saturday. On the last 2 Saturdays of observation, it appears
+that the patient was not active.**
 
 *3c: Accelerometer data allows the inspection activity over the course
 of the day. Make a single-panel plot that shows the 24-hour activity
